<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/bar_item_group_director">
        <menu>
            <item
                android:id="@+id/nav_workers"
                android:icon="@drawable/workers_nav_bar"
                android:title="@string/bar_item_nav_workers" />
        </menu>
    </item>

    <group >
        <item
            android:id="@+id/nav_company"
            android:title="@string/bar_item_nav_company"
            android:icon="@drawable/nav_bar_company"/>
    </group>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/test_icon"
            android:title="Gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/test_icon"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/test_icon"
            android:title="Tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/test_icon"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/test_icon"
                android:title="Send" />
        </menu>
    </item>

</menu>
