<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_save_apiary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details_apiary_btn_save_apiary"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="11"
                    android:text="@string/details_apiary_name"
                    android:textAllCaps="false" />

                <EditText
                    android:id="@+id/et_name_apiary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="11"
                    android:text="@string/details_apiary_region"
                    android:textAllCaps="false" />

                <EditText
                    android:id="@+id/et_region_apiary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="11"
                    android:text="@string/details_apiary_nearest_settlement"
                    android:textAllCaps="false" />

                <EditText
                    android:id="@+id/et_nearest_settlement_apiary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="11"
                    android:text="@string/details_apiary_latitude"
                    android:textAllCaps="false" />

                <EditText
                    android:id="@+id/et_latitude_apiary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="11"
                    android:text="@string/details_apiary_longitude"
                    android:textAllCaps="false" />

                <EditText
                    android:id="@+id/et_longitude_apiary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>